@@ -11,35 +11,25 @@ repositories {
 }
 
 dependencies {
+    compile "com.aspose:aspose-html:20.8"
 
-    testImplementation(
-            "org.junit.jupiter:junit-jupiter-engine:5.6.1",
-            "org.junit.jupiter:junit-jupiter-params:5.6.1",
-            "org.junit.platform:junit-platform-runner:1.6.1",
-            "com.aspose:aspose-html:20.8",
+    testCompile(
+            "org.junit.jupiter:junit-jupiter-engine:5.6.2",
+            "org.junit.jupiter:junit-jupiter-params:5.6.2",
+            "org.junit.platform:junit-platform-runner:1.6.2",
 
     )
 }
 
-task SimpleWait(type: JavaExec) {
-    classpath = sourceSets.test.runtimeClasspath
-    main = 'com.aspose.html.examples.SimpleWait'
-    jvmArgs '--enable-preview'
-}
-
 test {
     useJUnitPlatform()
-    jvmArgs '--enable-preview'
-}
 
+}
 compileJava {
-    sourceCompatibility = "14"
-    targetCompatibility = "14"
-    options.compilerArgs += ["--enable-preview"]
+    sourceCompatibility = "1.8"
+    targetCompatibility = "1.8"
 }
-
 compileTestJava {
-    sourceCompatibility = "14"
-    targetCompatibility = "14"
-    options.compilerArgs += ["--enable-preview"]
+    sourceCompatibility = "1.8"
+    targetCompatibility = "1.8"
 }
